4-Parser-generator/src/generated/GramParseGramsParser.java
package generated;// Generated from GramParseGrams.g4 by ANTLR 4.8

import generator.Grammar;
import generator.atoms.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramParseGramsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, WS=20, NAME=21, REGEX=22, CODETEXT=23;
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_header = 2, RULE_imports = 3, RULE_importExpr = 4, 
		RULE_importName = 5, RULE_tokens = 6, RULE_tokenExpr = 7, RULE_startState = 8, 
		RULE_skipAttr = 9, RULE_states = 10, RULE_stateExpr = 11, RULE_inheritState = 12, 
		RULE_synthState = 13, RULE_ruleExpr = 14, RULE_inheritRule = 15, RULE_codeBlock = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "program", "header", "imports", "importExpr", "importName", 
			"tokens", "tokenExpr", "startState", "skipAttr", "states", "stateExpr", 
			"inheritState", "synthState", "ruleExpr", "inheritRule", "codeBlock"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'grammar'", "';'", "'@imp'", "'{'", "'}'", "'import'", "'.'", 
			"'@tokens'", "':'", "'@start'", "'='", "'->'", "'skip'", "'@states'", 
			"'['", "']'", "'returns'", "'|'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "WS", "NAME", "REGEX", 
			"CODETEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GramParseGrams.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramParseGramsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Grammar gram;
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GramParseGramsParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);

		    ((StartContext)_localctx).gram =  new Grammar();

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			program(_localctx.gram);
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public Grammar gram;
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public TokensContext tokens() {
			return getRuleContext(TokensContext.class,0);
		}
		public StartStateContext startState() {
			return getRuleContext(StartStateContext.class,0);
		}
		public StatesContext states() {
			return getRuleContext(StatesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ProgramContext(ParserRuleContext parent, int invokingState, Grammar gram) {
			super(parent, invokingState);
			this.gram = gram;
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program(Grammar gram) throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState(), gram);
		enterRule(_localctx, 2, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			header(_localctx.gram);
			setState(38);
			imports(_localctx.gram);
			setState(39);
			tokens(_localctx.gram);
			setState(40);
			startState(_localctx.gram);
			setState(41);
			states(_localctx.gram);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public Grammar gram;
		public Token NAME;
		public TerminalNode NAME() { return getToken(GramParseGramsParser.NAME, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public HeaderContext(ParserRuleContext parent, int invokingState, Grammar gram) {
			super(parent, invokingState);
			this.gram = gram;
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header(Grammar gram) throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState(), gram);
		enterRule(_localctx, 4, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(T__0);
			setState(44);
			((HeaderContext)_localctx).NAME = match(NAME);
			setState(45);
			match(T__1);

			    _localctx.gram.setName((((HeaderContext)_localctx).NAME!=null?((HeaderContext)_localctx).NAME.getText():null));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public Grammar gram;
		public List<ImportExprContext> importExpr() {
			return getRuleContexts(ImportExprContext.class);
		}
		public ImportExprContext importExpr(int i) {
			return getRuleContext(ImportExprContext.class,i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ImportsContext(ParserRuleContext parent, int invokingState, Grammar gram) {
			super(parent, invokingState);
			this.gram = gram;
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitImports(this);
		}
	}

	public final ImportsContext imports(Grammar gram) throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState(), gram);
		enterRule(_localctx, 6, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(T__2);
			setState(49);
			match(T__3);
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(50);
				importExpr(_localctx.gram);
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportExprContext extends ParserRuleContext {
		public Grammar gram;
		public ImportNameContext importName;
		public ImportNameContext importName() {
			return getRuleContext(ImportNameContext.class,0);
		}
		public ImportExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ImportExprContext(ParserRuleContext parent, int invokingState, Grammar gram) {
			super(parent, invokingState);
			this.gram = gram;
		}
		@Override public int getRuleIndex() { return RULE_importExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterImportExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitImportExpr(this);
		}
	}

	public final ImportExprContext importExpr(Grammar gram) throws RecognitionException {
		ImportExprContext _localctx = new ImportExprContext(_ctx, getState(), gram);
		enterRule(_localctx, 8, RULE_importExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(58);
			match(T__5);
			setState(59);
			((ImportExprContext)_localctx).importName = importName();
			_localctx.gram.addImport(((ImportExprContext)_localctx).importName.name.toString());
			setState(61);
			match(T__1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportNameContext extends ParserRuleContext {
		public StringBuilder name;
		public Token n1;
		public Token n2;
		public List<TerminalNode> NAME() { return getTokens(GramParseGramsParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GramParseGramsParser.NAME, i);
		}
		public ImportNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterImportName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitImportName(this);
		}
	}

	public final ImportNameContext importName() throws RecognitionException {
		ImportNameContext _localctx = new ImportNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importName);

		    ((ImportNameContext)_localctx).name =  new StringBuilder();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			((ImportNameContext)_localctx).n1 = match(NAME);
			_localctx.name.append((((ImportNameContext)_localctx).n1!=null?((ImportNameContext)_localctx).n1.getText():null));
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(65);
				match(T__6);
				setState(66);
				((ImportNameContext)_localctx).n2 = match(NAME);
				_localctx.name.append('.').append((((ImportNameContext)_localctx).n2!=null?((ImportNameContext)_localctx).n2.getText():null));
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokensContext extends ParserRuleContext {
		public Grammar gram;
		public List<TokenExprContext> tokenExpr() {
			return getRuleContexts(TokenExprContext.class);
		}
		public TokenExprContext tokenExpr(int i) {
			return getRuleContext(TokenExprContext.class,i);
		}
		public TokensContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TokensContext(ParserRuleContext parent, int invokingState, Grammar gram) {
			super(parent, invokingState);
			this.gram = gram;
		}
		@Override public int getRuleIndex() { return RULE_tokens; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterTokens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitTokens(this);
		}
	}

	public final TokensContext tokens(Grammar gram) throws RecognitionException {
		TokensContext _localctx = new TokensContext(_ctx, getState(), gram);
		enterRule(_localctx, 12, RULE_tokens);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__7);
			setState(74);
			match(T__3);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(75);
				tokenExpr(_localctx.gram);
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokenExprContext extends ParserRuleContext {
		public Grammar gram;
		public boolean skipTokens;
		public Token NAME;
		public Token REGEX;
		public TerminalNode NAME() { return getToken(GramParseGramsParser.NAME, 0); }
		public TerminalNode REGEX() { return getToken(GramParseGramsParser.REGEX, 0); }
		public SkipAttrContext skipAttr() {
			return getRuleContext(SkipAttrContext.class,0);
		}
		public TokenExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TokenExprContext(ParserRuleContext parent, int invokingState, Grammar gram) {
			super(parent, invokingState);
			this.gram = gram;
		}
		@Override public int getRuleIndex() { return RULE_tokenExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterTokenExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitTokenExpr(this);
		}
	}

	public final TokenExprContext tokenExpr(Grammar gram) throws RecognitionException {
		TokenExprContext _localctx = new TokenExprContext(_ctx, getState(), gram);
		enterRule(_localctx, 14, RULE_tokenExpr);

		    ((TokenExprContext)_localctx).skipTokens =  false;

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			((TokenExprContext)_localctx).NAME = match(NAME);
			setState(84);
			match(T__8);
			setState(85);
			((TokenExprContext)_localctx).REGEX = match(REGEX);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(86);
				skipAttr();
				((TokenExprContext)_localctx).skipTokens =  true;
				}
			}

			setState(91);
			match(T__1);

			    if (_localctx.skipTokens) {
			        _localctx.gram.addSkipToken((((TokenExprContext)_localctx).NAME!=null?((TokenExprContext)_localctx).NAME.getText():null), (((TokenExprContext)_localctx).REGEX!=null?((TokenExprContext)_localctx).REGEX.getText():null));
			    } else {
			        _localctx.gram.addToken((((TokenExprContext)_localctx).NAME!=null?((TokenExprContext)_localctx).NAME.getText():null), (((TokenExprContext)_localctx).REGEX!=null?((TokenExprContext)_localctx).REGEX.getText():null));
			    }

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartStateContext extends ParserRuleContext {
		public Grammar gram;
		public Token NAME;
		public TerminalNode NAME() { return getToken(GramParseGramsParser.NAME, 0); }
		public StartStateContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StartStateContext(ParserRuleContext parent, int invokingState, Grammar gram) {
			super(parent, invokingState);
			this.gram = gram;
		}
		@Override public int getRuleIndex() { return RULE_startState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterStartState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitStartState(this);
		}
	}

	public final StartStateContext startState(Grammar gram) throws RecognitionException {
		StartStateContext _localctx = new StartStateContext(_ctx, getState(), gram);
		enterRule(_localctx, 16, RULE_startState);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__9);
			setState(95);
			match(T__10);
			setState(96);
			((StartStateContext)_localctx).NAME = match(NAME);
			setState(97);
			match(T__1);

			    _localctx.gram.setStartState((((StartStateContext)_localctx).NAME!=null?((StartStateContext)_localctx).NAME.getText():null));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SkipAttrContext extends ParserRuleContext {
		public SkipAttrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skipAttr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterSkipAttr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitSkipAttr(this);
		}
	}

	public final SkipAttrContext skipAttr() throws RecognitionException {
		SkipAttrContext _localctx = new SkipAttrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_skipAttr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__11);
			setState(101);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatesContext extends ParserRuleContext {
		public Grammar gram;
		public StateExprContext stateExpr;
		public List<StateExprContext> stateExpr() {
			return getRuleContexts(StateExprContext.class);
		}
		public StateExprContext stateExpr(int i) {
			return getRuleContext(StateExprContext.class,i);
		}
		public StatesContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatesContext(ParserRuleContext parent, int invokingState, Grammar gram) {
			super(parent, invokingState);
			this.gram = gram;
		}
		@Override public int getRuleIndex() { return RULE_states; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterStates(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitStates(this);
		}
	}

	public final StatesContext states(Grammar gram) throws RecognitionException {
		StatesContext _localctx = new StatesContext(_ctx, getState(), gram);
		enterRule(_localctx, 20, RULE_states);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__13);
			setState(104);
			match(T__3);
			setState(108); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(105);
				((StatesContext)_localctx).stateExpr = stateExpr();
				_localctx.gram.addState(((StatesContext)_localctx).stateExpr.state);
				}
				}
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NAME );
			setState(112);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateExprContext extends ParserRuleContext {
		public State state;
		public Token NAME;
		public RuleExprContext r1;
		public RuleExprContext r2;
		public TerminalNode NAME() { return getToken(GramParseGramsParser.NAME, 0); }
		public List<RuleExprContext> ruleExpr() {
			return getRuleContexts(RuleExprContext.class);
		}
		public RuleExprContext ruleExpr(int i) {
			return getRuleContext(RuleExprContext.class,i);
		}
		public InheritStateContext inheritState() {
			return getRuleContext(InheritStateContext.class,0);
		}
		public SynthStateContext synthState() {
			return getRuleContext(SynthStateContext.class,0);
		}
		public StateExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterStateExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitStateExpr(this);
		}
	}

	public final StateExprContext stateExpr() throws RecognitionException {
		StateExprContext _localctx = new StateExprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_stateExpr);

		    ((StateExprContext)_localctx).state =  new State();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			((StateExprContext)_localctx).NAME = match(NAME);
			_localctx.state.setName((((StateExprContext)_localctx).NAME!=null?((StateExprContext)_localctx).NAME.getText():null));
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(116);
				match(T__14);
				setState(117);
				inheritState(_localctx.state);
				setState(118);
				match(T__15);
				}
			}

			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(122);
				match(T__16);
				setState(123);
				match(T__14);
				setState(124);
				synthState(_localctx.state);
				setState(125);
				match(T__15);
				}
			}

			setState(129);
			match(T__8);
			setState(130);
			((StateExprContext)_localctx).r1 = ruleExpr();
			_localctx.state.addRule(((StateExprContext)_localctx).r1.r);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__17) {
				{
				{
				setState(132);
				match(T__17);
				setState(133);
				((StateExprContext)_localctx).r2 = ruleExpr();
				_localctx.state.addRule(((StateExprContext)_localctx).r2.r);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InheritStateContext extends ParserRuleContext {
		public State state;
		public Token type1;
		public Token name1;
		public Token type2;
		public Token name2;
		public List<TerminalNode> NAME() { return getTokens(GramParseGramsParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GramParseGramsParser.NAME, i);
		}
		public InheritStateContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public InheritStateContext(ParserRuleContext parent, int invokingState, State state) {
			super(parent, invokingState);
			this.state = state;
		}
		@Override public int getRuleIndex() { return RULE_inheritState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterInheritState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitInheritState(this);
		}
	}

	public final InheritStateContext inheritState(State state) throws RecognitionException {
		InheritStateContext _localctx = new InheritStateContext(_ctx, getState(), state);
		enterRule(_localctx, 24, RULE_inheritState);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			((InheritStateContext)_localctx).type1 = match(NAME);
			setState(144);
			((InheritStateContext)_localctx).name1 = match(NAME);
			_localctx.state.addParameter((((InheritStateContext)_localctx).type1!=null?((InheritStateContext)_localctx).type1.getText():null), (((InheritStateContext)_localctx).name1!=null?((InheritStateContext)_localctx).name1.getText():null));
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18) {
				{
				{
				setState(146);
				match(T__18);
				setState(147);
				((InheritStateContext)_localctx).type2 = match(NAME);
				setState(148);
				((InheritStateContext)_localctx).name2 = match(NAME);
				_localctx.state.addParameter((((InheritStateContext)_localctx).type2!=null?((InheritStateContext)_localctx).type2.getText():null), (((InheritStateContext)_localctx).name2!=null?((InheritStateContext)_localctx).name2.getText():null));
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SynthStateContext extends ParserRuleContext {
		public State state;
		public Token type1;
		public Token name1;
		public Token type2;
		public Token name2;
		public List<TerminalNode> NAME() { return getTokens(GramParseGramsParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GramParseGramsParser.NAME, i);
		}
		public SynthStateContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SynthStateContext(ParserRuleContext parent, int invokingState, State state) {
			super(parent, invokingState);
			this.state = state;
		}
		@Override public int getRuleIndex() { return RULE_synthState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).enterSynthState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramParseGramsListener ) ((GramParseGramsListener)listener).exitSynthState(this);
		}
	}
